src/bin/snapshots/snapshots__Stmt.Dynamic.oid.input.snap
---
source: src/bin/snapshots.rs
expression: forest
---
Ok(
    Stmt::Dynamic(
        Expr {
            kind: ExprKind::OidCall {
                oid: OidArgs {
                    value: [
                        OidSegment {
                            seg: _,
                        },
                    ],
                },
            },
        },
    ),
)
